# Amalgame

./: .gitignore  README.md  compile.sh  debug_eq  file_lex_test  install.sh  lexer_file_test  lexer_simple  lexer_test  meson.build  parser_real  parser_test  parser_test2  test_ast  test_ast3  test_ast4  test_contains2  use.sh
.github/workflow/: release-windows.yml  release.yml
bootstrap/: .gitattributes  README.md  amc-linux-x86_64  checksums.sha256
docs/: DEVELOPER_GUIDE.md
docs/changelog/: CHANGELOG.md  roadmap.md
docs/language/: grammar.ebnf  grammar.md
docs/more/: Architecture.txt  Constructions Supportées.xlsx  Correspondances CODE → C.xlsx  Directives #line.txt  Etat de la Documentation.txt  Fonctionnalités du Langage.xlsx  Fonctionnalités.txt  Gestion des Erreurs.txt  Limitations Actuelles (v0.1.0).txt  Précédence des Opérateurs.txt  Roadmap - Phase 1  Transpileur MVP.xlsx  Roadmap - Phase 2  Écosystème.xlsx  Roadmap - Phase 3  Maturité.xlsx  String Interpolation.txt  Structure du Projet.txt  Styles.txt  Tokens Produits.xlsx  Types CODE → C.xlsx  Utilisation.txt  État de la Documentation.txt
docs/transpiler/: ast.md  generator.md  lexer.md  (+3 more)
install/: PUBLISHING.md  install.sh  release.sh
src/: main.vala  meason.build
tests/: diagnose.sh  diagnose_collections.sh  diagnose_enum.sh  diagnose_if_expr.sh  run_all_tests.sh  run_stdlib_tests.sh  run_tests.sh
tmp/: debug_lexer.am  probe2  probe2.am  test_ast.am  test_ast2.am  test_ast3.am  test_ast4.am  test_newline.am  test_newline2  test_newline2.am  test_shape  test_shape.am  test_source.am
(+144 files in other folders)
